--- a/readme
+++ b/readme
@@ -4,13 +4,13 @@
 python3 -m cex.binance_history all
 
 тикер и все тф
-python3 -m cex.binance_history btcusdt
+python3 -m cex.binance_history btcusdt spot
 
 тикер и тф
-python3 -m cex.binance_history btcusdt 30m
+python3 -m cex.binance_history btcusdt futures 30m
 
 тикер тф грузить с и новее диапазон
-python3 -m cex.binance_history btcusdt 5m 2023-08
+python3 -m cex.binance_history btcusdt spot 5m 2023-08
 
 # загрузить последние 1000 свеч по всем тф тикера
 python3 cex/binance_candles.py btcusdt
