--- a/static/js/indicators/readme.me
+++ b/static/js/indicators/readme.me
@@ -1,178 +1,118 @@
-Структура индикатора
-Каждый индикатор — это объект с двумя ключевыми частями:
+Мануал по индикаторам
 
-1. meta
-Описание индикатора для UI и конфигурации:
 
-js
-meta: {
-  id: 'rsi',                // Уникальный идентификатор
-  name: 'Relative Strength Index', // Название для UI
-  position: 'bottom',       // 'top' — поверх графика, 'bottom' — под графиком
-  zIndex: 50,               // Порядок отрисовки
-  height: 100,              // Высота панели (только для bottom)
-  defaultParams: {          // Дефолтные параметры
-    period: 14,
-    color: 0xffffff,
-    fillColor: 0x161616,
-    levels: [30, 70],       // Уровни (если нужны)
-    levelColors: [0xFF2E2E, 0x00ff00]
-  }
-}
-2. createIndicator
-Функция, которая создаёт графику и возвращает методы render и updateHover.
+1. Общая структура
 
-js
-createIndicator({ layer, overlay }, layout, params = {}) {
-  // layer — PIXI.Container для отрисовки
-  // overlay — объект для вывода параметров/значений в UI
-  // layout — геометрия графика (candles, plotW, plotH, indexToX и т.д.)
-  // params — пользовательские настройки (с дефолтами из meta.defaultParams)
+Каждый индикатор — это объект с двумя частями:
 
-  // Создаём графику
-  const line     = new PIXI.Graphics();
-  const zeroLine = new PIXI.Graphics(); // если нужен ноль
-  const fillArea = new PIXI.Graphics();
+meta
 
-  layer.sortableChildren = true;
-  fillArea.zIndex  = 0;
-  zeroLine.zIndex  = 5;
-  line.zIndex      = 10;
+id — уникальный идентификатор
 
-  layer.addChild(fillArea, zeroLine, line);
+name — название для UI
 
-  let values = [];
-  let hoverIdx = null;
+position — 'top' или 'bottom'
 
-  // --- Вспомогательные функции (например, SMA, EMA, stddev) ---
-  function sma(values, p) { /* ... */ }
-  function ema(values, p) { /* ... */ }
+zIndex — порядок отрисовки
 
-  // --- Основной расчёт индикатора ---
-  function calculate(data, params) {
-    // data = layout.candles
-    // возвращаем массив значений (с null для пустых точек)
-  }
+height — высота панели (для bottom)
 
-  // --- Отрисовка ---
-  function render(localLayout) {
-    const candles = localLayout.candles;
-    if (!candles?.length) return;
+defaultParams — дефолтные параметры (периоды, цвета, уровни и т.д.)
 
-    values = calculate(candles, params);
+createIndicator Возвращает объект с методами:
 
-    const lastIdx = values.length - 1;
-    const lastVal = values[lastIdx];
+render(localLayout) — отрисовка
 
-    line.clear();
-    zeroLine.clear();
-    fillArea.clear();
+updateHover(candle, idx) — обновление значений при наведении
 
-    const plotW = localLayout.plotW;
-    const plotH = localLayout.plotH;
 
-    // фон
-    fillArea.beginFill(params.fillColor);
-    fillArea.drawRect(0, 0, plotW, plotH);
-    fillArea.endFill();
+2. Основные принципы
 
-    // линия индикатора
-    let started = false;
-    line.beginPath();
-    for (let i = 0; i < values.length; i++) {
-      const val = values[i];
-      if (val == null) continue;
+Очистка перед отрисовкой: graphics.clear() всегда в начале render.
 
-      const x = localLayout.indexToX(i);
-      if (x < 0) continue;
-      if (x > plotW) break;
+LOD (Level of Detail):
 
-      const y = plotH / 2 - val * (plotH / 2); // нормализация под ось
-      if (!started) { line.moveTo(x, y); started = true; }
-      else line.lineTo(x, y);
-    }
-    if (started) line.stroke({ width: 2, color: params.color });
+Для линий используем step (прореживание точек) при большом числе баров.
 
-    // центральная линия (ноль, если нужна)
-    const zeroY = plotH / 2;
-    zeroLine.moveTo(0, zeroY);
-    zeroLine.lineTo(plotW, zeroY);
-    zeroLine.stroke({ width: 0.25, color: 0x555555 });
+Для bottom‑индикаторов — ограничиваем отрисовку видимым диапазоном (firstIdx, lastVisibleIdx) + буфер ±2 свечи.
 
-    // overlay
-    if (overlay?.updateParam) {
-      overlay.updateParam(params.id ?? 'custom', `${params.period}`);
-    }
-    if (overlay?.updateValue && values.length) {
-      const isHoverLocked = hoverIdx != null && hoverIdx !== lastIdx;
-      const val = isHoverLocked ? values[hoverIdx] : lastVal;
-      overlay.updateValue(params.id ?? 'custom', val != null ? val.toFixed(2) : '');
-    }
-  }
+Агрегация:
 
-  // --- Обновление при наведении ---
-  function updateHover(candle, idx) {
-    if (!overlay?.updateValue || !values?.length) return;
-    const lastIdx = values.length - 1;
+Верхние индикаторы (MA, SMA, EMA) и объём могут использовать агрегацию (суммирование/среднее по N свечам).
 
-    if (idx == null || idx < 0 || idx >= values.length) {
-      hoverIdx = null;
-      const autoVal = values[lastIdx];
-      overlay.updateValue(params.id ?? 'custom', autoVal != null ? autoVal.toFixed(2) : '');
-      return;
-    }
+Bottom‑индикаторы (RSI, MACD, AO и т.д.) работают без агрегации, чтобы сохранить точность.
 
-    hoverIdx = idx;
-    const v = values[idx];
-    overlay.updateValue(params.id ?? 'custom', v != null ? v.toFixed(2) : '');
-  }
+Overlay:
 
-  return { render, updateHover };
-}
-📄 Минимальный пример
-js
-export const myIndicator = {
-  meta: {
-    id: 'myIndicator',
-    name: 'My Custom Line',
-    position: 'top',
-    zIndex: 70,
-    defaultParams: {
-      color: 0xffcc00
-    }
-  },
+updateParam(id, text) — вывод параметров (например, 14, 70/30).
 
-  createIndicator({ layer }, layout, params = {}) {
-    const color = params.color ?? 0xffcc00;
-    const line = new PIXI.Graphics();
-    layer.addChild(line);
+updateValue(id, text) — вывод текущего значения или значения под курсором.
 
-    function render(layout) {
-      const candles = layout.candles;
-      if (!candles?.length) return;
+Hover‑логика:
 
-      line.clear();
-      for (let i = 0; i < candles.length; i++) {
-        const x = layout.indexToX(i);
-        const y = layout.plotH / 2;
-        if (i === 0) line.moveTo(x, y);
-        else line.lineTo(x, y);
-      }
-      line.stroke({ width: 2, color });
-    }
+Если курсор наведён (idx), показываем значение на этой свече.
 
-    return { render };
-  }
-};
-⚙️ Подключение в конфиг
-js
-indicators: ['ma', 'rsi', 'volume', 'macd']
-Все параметры берутся из meta.defaultParams внутри каждого индикатора.
+Если нет — показываем последнее актуальное.
 
-👉 Теперь у нас есть единый шаблон‑мануал:
 
-meta описывает индикатор.
+3. Вспомогательные функции
 
-createIndicator создаёт графику и возвращает render + updateHover.
+sma(values, p) — простое скользящее среднее.
 
-Внутри render всегда: очистка → фон → линия/гистограмма → нулевая линия (если нужна) → overlay.
+ema(values, p) — экспоненциальное скользящее среднее.
+
+stddev(values, p) — стандартное отклонение.
+
+trueRange(curr, prev) — для ATR.
+
+Все хелперы локальные внутри индикатора, чтобы не плодить глобальных зависимостей.
+
+
+4. Философия
+
+Минимум нагрузки: рисуем только то, что реально видно.
+
+Простота: каждый индикатор — изолированный модуль, без скрытых зависимостей.
+
+Единый стиль: все индикаторы пишутся по одному шаблону, чтобы новый разработчик мог открыть любой файл и сразу понять механику.
+
+Гибкость: параметры берутся из meta.defaultParams, но могут быть переопределены пользователем.
+
+
+5. Шаблон работы render
+
+Получаем свечи: const candles = localLayout.candles;
+
+Считаем значения: values = calculate(candles, params)
+
+Определяем видимый диапазон + буфер
+
+Очищаем графику
+
+Рисуем: линия / бары / фон / нулевая линия
+
+Обновляем overlay
+
+
+6. Мини‑чеклист для нового индикатора
+
+[ ] Заполнить meta
+
+[ ] Реализовать calculate
+
+[ ] В render: очистка → расчёт → видимый диапазон → отрисовка
+
+[ ] В updateHover: логика курсора
+
+[ ] Проверить overlay
+
+
+Теперь вы знаете...
+
+где считать (calculate),
+
+где рисовать (render),
+
+где обновлять UI (overlay),
+
+как работает LOD и агрегация.
