--- a/static/js/indicators/readme.me
+++ b/static/js/indicators/readme.me
@@ -1,8 +1,5 @@
-Мануал по индикаторам
-
-
+Мануал по индикаторам (обновлённая версия)
 1. Общая структура
-
 Каждый индикатор — это объект с двумя частями:
 
 meta
@@ -17,7 +14,7 @@ zIndex — порядок отрисовки
 
 height — высота панели (для bottom)
 
-defaultParams — дефолтные параметры (периоды, цвета, уровни и т.д.)
+defaultParams — дефолтные параметры (периоды, цвета, уровни, толщина линии и т.д.)
 
 createIndicator Возвращает объект с методами:
 
@@ -25,9 +22,7 @@ render(localLayout) — отрисовка
 
 updateHover(candle, idx) — обновление значений при наведении
 
-
 2. Основные принципы
-
 Очистка перед отрисовкой: graphics.clear() всегда в начале render.
 
 LOD (Level of Detail):
@@ -44,7 +39,7 @@ Bottom‑индикаторы (RSI, MACD, AO и т.д.) работают без 
 
 Overlay:
 
-updateParam(id, text) — вывод параметров (например, 14, 70/30).
+updateParam(id, text) — вывод параметров (например, период RSI).
 
 updateValue(id, text) — вывод текущего значения или значения под курсором.
 
@@ -54,33 +49,27 @@ Hover‑логика:
 
 Если нет — показываем последнее актуальное.
 
-
 3. Вспомогательные функции
+sma(values, p) — простое скользящее среднее
 
-sma(values, p) — простое скользящее среднее.
+ema(values, p) — экспоненциальное скользящее среднее
 
-ema(values, p) — экспоненциальное скользящее среднее.
+stddev(values, p) — стандартное отклонение
 
-stddev(values, p) — стандартное отклонение.
-
-trueRange(curr, prev) — для ATR.
+trueRange(curr, prev) — для ATR
 
 Все хелперы локальные внутри индикатора, чтобы не плодить глобальных зависимостей.
 
-
 4. Философия
-
 Минимум нагрузки: рисуем только то, что реально видно.
 
 Простота: каждый индикатор — изолированный модуль, без скрытых зависимостей.
 
-Единый стиль: все индикаторы пишутся по одному шаблону, чтобы новый разработчик мог открыть любой файл и сразу понять механику.
+Единый стиль: все индикаторы пишутся по одному шаблону.
 
 Гибкость: параметры берутся из meta.defaultParams, но могут быть переопределены пользователем.
 
-
 5. Шаблон работы render
-
 Получаем свечи: const candles = localLayout.candles;
 
 Считаем значения: values = calculate(candles, params)
@@ -93,9 +82,7 @@ trueRange(curr, prev) — для ATR.
 
 Обновляем overlay
 
-
 6. Мини‑чеклист для нового индикатора
-
 [ ] Заполнить meta
 
 [ ] Реализовать calculate
@@ -106,13 +93,8 @@ trueRange(curr, prev) — для ATR.
 
 [ ] Проверить overlay
 
+⚡ Новое:
 
-Теперь вы знаете...
+В defaultParams можно задавать lineWidth для толщины линии.
 
-где считать (calculate),
-
-где рисовать (render),
-
-где обновлять UI (overlay),
-
-как работает LOD и агрегация.
+В render можно использовать лёгкое сглаживание (усреднение по окну) для визуальной стабильности без отключения LOD.
