--- a/static/js/indicators/readme.me
+++ b/static/js/indicators/readme.me
@@ -98,3 +98,61 @@ trueRange(curr, prev) — для ATR
 В defaultParams можно задавать lineWidth для толщины линии.
 
 В render можно использовать лёгкое сглаживание (усреднение по окну) для визуальной стабильности без отключения LOD.
+
+7. Расположение индикаторов
+
+position: 'bottom' — классические панели под графиком (RSI, MACD, AO, ATR и т.д.).
+
+position: 'top' — индикаторы над графиком (например, MA, EMA).
+
+⚡ Новое: position: 'right' — боковые индикаторы (например, VPRV — профиль объёма), которые занимают фиксированную ширину и всю высоту плота.
+
+8. Overlay расширения
+
+updateParam(id, text) — параметры (например, «RSI 14»).
+
+updateValue(id, text) — значения (например, «65.32»).
+
+⚡ Новое: поддержка множественных значений (например, MACD: «0.123 / 0.456 / -0.789»).
+
+⚡ Новое: для профилей (VPRV) можно выводить POC и Value Area: «POC 110000 / VA 70%».
+
+9. Hover‑логика (расширенная)
+
+Для линий: показываем значение под курсором.
+
+Для баров (AO, MACD histogram): показываем значение конкретного бара.
+
+⚡ Новое: для профилей (VPRV) hover может подсвечивать ценовой уровень и показывать объём на нём.
+
+10. Производительность
+
+Всегда использовать graphics.clear() перед отрисовкой.
+
+Для длинных массивов — применять LOD (прореживание точек).
+
+Для баров — рисовать только видимый диапазон + небольшой буфер.
+
+⚡ Новое: при расчёте профилей (VPRV) — агрегировать только видимый диапазон свечей, чтобы не грузить память.
+
+11. Дополнительные хелперы
+
+normalize(values) — нормализация массива в диапазон [0..1].
+
+scale(values, factor) — масштабирование.
+
+⚡ Новое: binByPrice(candles, step) — агрегирование объёмов по ценовым уровням (для VPRV).
+
+⚡ Новое: smoothArray(values, window) — лёгкое сглаживание для визуальной стабильности.
+
+12. Чеклист для нестандартных индикаторов (VPRV, профили)
+
+[ ] meta: указать position: 'right' и width.
+
+[ ] calculate: агрегировать объёмы по ценовым уровням.
+
+[ ] render: рисовать горизонтальные бары справа от графика.
+
+[ ] overlay: выводить POC и Value Area.
+
+[ ] updateHover: подсветка уровня и объёма под курсором.
